# waybar-timer

./: Cargo.toml  LICENSE  README.md  waybar-timer.sh
src/: main.rs
