[package]
name = "waybar_timer"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
serde_dispatch = { git = "https://github.com/jbirnick/serde-dispatch" }
clap = { version = "4.5", features = ["derive"] }
time = { version = "0.3.37", features = ["formatting", "local-offset", "macros"] }
serde = { version = "1.0.217", features = ["derive"] }
notify-rust = "4.11.3"
bincode = "1.3.3"
